--- a/gamerunner/pom.xml
+++ b/gamerunner/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.14</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
